// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style": secretMappingTestDir2/realms/alpha/secret-mappings/am.applications.agents.remote.consent.request.signing.ES256.json 1`] = `
{
  "_id": "am.applications.agents.remote.consent.request.signing.ES256",
  "_rev": "74952968",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "test",
  ],
  "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style": secretMappingTestDir2/realms/alpha/secret-mappings/am.services.pingone.worker.bogus.clientsecret.json 1`] = `
{
  "_id": "am.services.pingone.worker.bogus.clientsecret",
  "_rev": "518043544",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-ping-one-worker-secret",
  ],
  "secretId": "am.services.pingone.worker.bogus.clientsecret",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style": secretMappingTestDir1/realms/alpha/secret-mappings/am.applications.agents.remote.consent.request.signing.ES256.json 1`] = `
{
  "_id": "am.applications.agents.remote.consent.request.signing.ES256",
  "_rev": "74952968",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "test",
  ],
  "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style": secretMappingTestDir1/realms/alpha/secret-mappings/am.services.pingone.worker.bogus.clientsecret.json 1`] = `
{
  "_id": "am.services.pingone.worker.bogus.clientsecret",
  "_rev": "518043544",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-ping-one-worker-secret",
  ],
  "secretId": "am.services.pingone.worker.bogus.clientsecret",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -n esv-ping-one-worker-secret -D secretMappingTestDir3": should export the secret-mapping in alpha realm with alias name: esv-ping-one-worker-secret in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -n esv-ping-one-worker-secret -D secretMappingTestDir3": should export the secret-mapping in alpha realm with alias name: esv-ping-one-worker-secret in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -n esv-ping-one-worker-secret -D secretMappingTestDir3": should export the secret-mapping in alpha realm with alias name: esv-ping-one-worker-secret in fr-config-manager style": secretMappingTestDir3/realms/alpha/secret-mappings/am.services.pingone.worker.bogus.clientsecret.json 1`] = `
{
  "_id": "am.services.pingone.worker.bogus.clientsecret",
  "_rev": "518043544",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-ping-one-worker-secret",
  ],
  "secretId": "am.services.pingone.worker.bogus.clientsecret",
}
`;
